force-app/main/default/objects/Name_Parse_Token__mdt/Name_Parse_Token__mdt.object-meta.xml
<CustomObject>
    <label>Name Parse Token</label>
    <pluralLabel>Name Parse Tokens</pluralLabel>
</CustomObject>