force-app/main/default/objects/Name_Parse_Token__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to disable this token without deleting the record. Author: Jason Ott.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>