force-app/main/default/objects/Name_Parse_Token__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>The literal name token to recognize (e.g. &quot;van&quot;, &quot;de&quot;, &quot;Jr&quot;). Matched case-insensitively; a trailing period or comma is ignored. Author: Jason Ott.</description>
    <label>Token</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>