force-app/main/default/objects/Name_Parse_Token__mdt/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <description>Suffix = a trailing token (e.g. Jr, MD) that is stripped before splitting first/last. Particle = a last-name prefix (e.g. van, de, della) that marks where the last name begins. Author: Jason Ott.</description>
    <label>Token Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particle</fullName>
            </value>
            <value>
                <fullName>Suffix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>